Bug 142853 disabling XUL cache causes assertions, eats ram honor pref: nglayout.debug.disable_xul_cache this fixes the assertion r=waterson sr=alecf